syntax = "proto3";

option csharp_namespace = "server.api.gRPC";

package shared;

message Pagination {
	int32 offset = 1;
	int32 limit = 2;
}


message ListedProductMessage {
	string id = 1;
	string name = 2;
	string price = 3;
	int32 CapacityPerUnit = 4;
	string imgUrl = 5;
}
message ListedDriverMessage {
	int32 EmployeeId = 1;
	int32 WorkHours = 2;
	int32 StoreId = 3;
}